Fix of some vertical spacing issues

--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -1,5 +1,5 @@
 .Toolbar {
-    height: 5%;
+    height: 38px;
     width: 100%;
     position: fixed;
     top: 0;
