--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -1,3 +1,3 @@
 .Content {
-    margin-top: 45px;
+    margin-top: 65px;
 }
